fix background image spacing. add round border and dark background overlay to gallery

--- a/css/sparkles.css
+++ b/css/sparkles.css
@@ -690,6 +690,10 @@ footer .fab.fa-pinterest:hover{
     font-weight: 100;
   }
 
+  h2.portfolio-headings.our-gallery {
+    border-bottom: 1px solid transparent; 
+  }
+
 
   /* **********************************************************************
                                 PORTFOLIO PAGE  
@@ -714,16 +718,52 @@ footer .fab.fa-pinterest:hover{
     /* text-align: center; */
   }
 
+  .gallery-headings {
+    /* font-family: 'Germania One', cursive; */
+      font-family: 'Josefin Sans', sans-serif;
+      /* font-family: 'Lato', sans-serif; */
+    font-size: 2.2rem;
+  }
+
 .gallery-bg {
   border-radius: 50%;
   background-color: bisque;
   width: 100%;
   height: 400px;
+  overflow: hidden;
+  background-color: rgba(0,0,0,0.3);
+  background-blend-mode: multiply;
 }
+
+.gallery-bg:hover {
+  background-color: rgba(0,0,0,0.5);
+}
+
+/* .gallery-outer-div {
+    background-color: rgba(0,0,0,0.3);
+  background-blend-mode: multiply;
+} */
+
+.gallery-img-content {
+  position: relative;
+  z-index: 2;
+  margin-top: 40%;
+  margin-bottom: -35%;
+  text-align: center;
+}
+
+/* .gallery-outer-div{
+  background: url('https://i.imgur.com/twq2tkJ.jpg') 50% 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgba(0,0,0,0.3);
+  background-blend-mode: multiply;
+} */
 
 .gallery-bg-wedding {
   background: url('https://i.imgur.com/twq2tkJ.jpg') 50% 0;
-  /* background-attachment: fixed; */
+  
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -733,7 +773,6 @@ footer .fab.fa-pinterest:hover{
 
 .gallery-bg-social {
   background: url('https://i.imgur.com/CiXd4f6.jpg') 50% 0;
-  /* background-attachment: fixed; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -743,16 +782,19 @@ footer .fab.fa-pinterest:hover{
 
 .gallery-bg-corporate{
   background: url('https://i.imgur.com/zerRdJv.jpg') 50% 0;
-  /* background-attachment: fixed; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-color: rgba(0,0,0,0.3);
   background-blend-mode: multiply;
 }
-.gallery-bg a.gallery-title{
+
+.gallery-img-content p.gallery-title{
   /* margin: auto; */
-  /* color: rgb(255, 255, 255); */
+  font-size: 2.5rem;
+  font-weight: 500;
+  font-family: 'Germania One', cursive;
+  color: rgb(255, 255, 255);
 }
 
   #weddings p {
@@ -881,6 +923,11 @@ footer .fab.fa-pinterest:hover{
     margin-bottom: 75%;
     text-align: center;
   }
+
+  .gallery-bg {
+    width: 120%;
+    height: 300px;
+  }
 }
 
 /* ****** max-width: 768px ****** */
@@ -922,6 +969,22 @@ footer .fab.fa-pinterest:hover{
     display: none;
   }
 
+  .gallery-bg {
+    width: 90%;
+    height: 300px;
+  }
+
+  .gallery-bg-wedding {
+    margin-left:60px;
+  }
+  .gallery-bg-social {
+    margin-left: -60px;
+  }
+
+  .gallery-bg-corporate {
+    margin-top: -60px;
+  }
+
 }
 
 /* ****** max-width: 576px ****** */
@@ -955,6 +1018,23 @@ footer .fab.fa-pinterest:hover{
     margin-top: -35%;
     margin-bottom: 32%;
     text-align: center;
+  }
+
+  .gallery-bg {
+    width: 140%;
+    height: 250px;
+  }
+
+  .gallery-bg-wedding {
+    margin-left:-13px;
+  }
+  .gallery-bg-social {
+    margin-left: -55px;
+  }
+
+  .gallery-bg-corporate {
+    margin-top: -70px;
+    margin-left: -30px;
   }
 
 }
